# IPPPlus

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_fft.cpp  bench_fir.cpp  bench_main.cpp  bench_resampling.cpp  bench_sin_cos.cpp  ipps_extension_test.cpp  ipps_test.cpp  ipptype_test.cpp  ipptype_test.hpp  main.cpp  test_utils.hpp
bench/gtest/cmake/: internal_utils.cmake
cmake/: FindIPP.cmake  IPPPlus.cmake
include/: ipp.hpp  ippcore.hpp  ipps.hpp  ipps_extension.hpp  ipptype.hpp  ippvm.hpp
include/detail/: ipps.hpp  ipps_extension.hpp  ipptype.hpp  ippvm.hpp
